# smartpi-dash

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  README.md  REPORT_ab_diagnostics.md  REPORT_model_health_graphs.md  app.py  config.py  dashboard.html  ha_client.py  import.py  mcp.json  pyproject.toml  requirements.txt  setup_diagram.py  transforms.py  ws_listener.py
.agents/skills/legal-advisor/: SKILL.md
.codex/: config.toml
static/: smartpi_block_diagram.html  smartpi_block_diagram_v2.html
templates/: dashboard.html
tests/: conftest.py  test_app.py  test_config.py  test_transforms.py
